<resources>
    <string name="app_name">MusicApp</string>
    <string name="buy">buy</string>
    <string name="name">Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="pay">Pay</string>
    <string name="payment_api">PayPal provide a Restful API, You can use it to support payment in your app, more details developer.paypal.com/docs/api/</string>

    <string-array name="music">
        <item>Despacito</item>
        <item>Wild Thoughts</item>
        <item>I\'m The One</item>
        <item>That\'s What I Like</item>
        <item>Shape Of You</item>
    </string-array>

    <string-array name="music_artist">
        <item>Luis Fonsi&#38; Daddy Yankee Featuring Justin Bieber</item>
        <item>DJ Khaled Featuring</item>
        <item>DJ Khaled Featuring Justin</item>
        <item>Bruno Mars</item>
        <item>Ed Sheeran</item>
    </string-array>

    <string-array name="music_rate">
        <item>3</item>
        <item>5</item>
        <item>4</item>
        <item>2</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="detail">Detail of music</string>
    <string name="list">List of music name when you click the music you will see details</string>
    <string name="back">Back To Music List</string>
    <string name="payment">User can pay a music using this screen</string>

</resources>
